refactor: split ganglia-core and create ganglia-coding for better modularity
- Moved coding-specific tools (Bash, FileEdit, WebFetch) to new ganglia-coding module.
- Refactored GangliaKernel and StandardPromptEngine to support dynamic injection of ToolSets and ContextSources via BootstrapOptions.
- Updated all entry points (Terminal, Web, Examples) to use the new injection mechanism.
- Fixed null-safety issues in StandardPromptEngine and improved integration test robustness.
- Verified all 25 integration tests are passing.