@@ -9,6 +9,7 @@ import io.vertx.junit5.VertxTestContext;
 import work.Main;
 import work.ganglia.Ganglia;
 import work.ganglia.BootstrapOptions;
+import work.ganglia.coding.tool.CodingToolsFactory;
 import work.ganglia.port.external.llm.ChatRequest;
 import work.ganglia.port.external.llm.ModelGateway;
 import work.ganglia.port.external.llm.ModelResponse;
@@ -27,7 +28,7 @@ import java.util.Map;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -36,23 +37,24 @@ public class AgentLoopIT {
 
     private Ganglia ganglia;
     private ModelGateway mockModel;
-    
-    @TempDir
-    Path sharedTempDir;
+    private Path tempDir;
 
     @BeforeEach
-    void setUp(Vertx vertx, VertxTestContext testContext) {
+    void setUp(Vertx vertx, VertxTestContext testContext, @TempDir Path tempDir) throws java.io.IOException {
+        this.tempDir = tempDir;
         mockModel = mock(ModelGateway.class);
-        // Ensure background tasks like reflection don't crash with NPE
-        when(mockModel.chat(any(ChatRequest.class))).thenReturn(Future.failedFuture("Reflection disabled in tests"));
+        // Default failure for bootstrap
+        when(mockModel.chat(any(ChatRequest.class))).thenReturn(Future.failedFuture("Reflection disabled"));
 
-        String projectRoot = sharedTempDir.toAbsolutePath().toString();
+        String projectRoot = tempDir.toRealPath().toString();
+        CodingToolsFactory codingToolsFactory = new CodingToolsFactory(vertx, projectRoot);
 
-        // Bootstrap with real components but mocked model
         BootstrapOptions options = BootstrapOptions.defaultOptions()
             .withProjectRoot(projectRoot)
             .withModelGateway(mockModel)
-            .withOverrideConfig(new JsonObject().put("webui", new JsonObject().put("enabled", false)));
+            .withOverrideConfig(new JsonObject().put("webui", new JsonObject().put("enabled", false)))
+            .withExtraToolSets(codingToolsFactory.createToolSets())
+            .withExtraContextSources(codingToolsFactory.createContextSources());
 
         Main.bootstrap(vertx, options)
             .onComplete(testContext.succeeding((Ganglia g) -> {
@@ -63,32 +65,30 @@ public class AgentLoopIT {
 
     @Test
     void testFileConcatenation(Vertx vertx, VertxTestContext testContext) {
-        // Prepare test files
-        String fileA = sharedTempDir.resolve("a.txt").toString();
-        String fileB = sharedTempDir.resolve("b.txt").toString();
-        vertx.fileSystem().writeFileBlocking(fileA, Buffer.buffer("Hello"));
-        vertx.fileSystem().writeFileBlocking(fileB, Buffer.buffer("World"));
+        String file1 = tempDir.resolve("file1.txt").toString();
+        String file2 = tempDir.resolve("file2.txt").toString();
+        vertx.fileSystem().writeFileBlocking(file1, Buffer.buffer("Part 1"));
+        vertx.fileSystem().writeFileBlocking(file2, Buffer.buffer("Part 2"));
 
-        // Define expected sequence of tool calls
-        ToolCall lsCall = new ToolCall("c1", "list_directory", Map.of("path", sharedTempDir.toString()));
-        ToolCall readACall = new ToolCall("c2", "read_file", Map.of("path", fileA));
-        ToolCall readBCall = new ToolCall("c3", "read_file", Map.of("path", fileB));
+        // Mock Tool Calls: list, then read 1, then read 2
+        ToolCall listCall = new ToolCall("c1", "list_directory", Map.of("path", "."));
+        ToolCall readCall1 = new ToolCall("c2", "read_file", Map.of("path", "file1.txt"));
+        ToolCall readCall2 = new ToolCall("c3", "read_file", Map.of("path", "file2.txt"));
 
         when(mockModel.chatStream(any(ChatRequest.class), any()))
-            .thenReturn(Future.succeededFuture(new ModelResponse("I will list files.", List.of(lsCall), new TokenUsage(1, 1))))
-            .thenReturn(Future.succeededFuture(new ModelResponse("I see a.txt and b.txt. Reading a.txt.", List.of(readACall), new TokenUsage(1, 1))))
-            .thenReturn(Future.succeededFuture(new ModelResponse("Reading b.txt.", List.of(readBCall), new TokenUsage(1, 1))))
-            .thenReturn(Future.succeededFuture(new ModelResponse("Final result is HelloWorld", Collections.emptyList(), new TokenUsage(1, 1))));
+            .thenReturn(Future.succeededFuture(new ModelResponse("Listing files.", List.of(listCall), new TokenUsage(1, 1))))
+            .thenReturn(Future.succeededFuture(new ModelResponse("Reading file 1.", List.of(readCall1), new TokenUsage(1, 1))))
+            .thenReturn(Future.succeededFuture(new ModelResponse("Reading file 2.", List.of(readCall2), new TokenUsage(1, 1))))
+            .thenReturn(Future.succeededFuture(new ModelResponse("The content is: Part 1 Part 2", Collections.emptyList(), new TokenUsage(1, 1))));
 
         SessionContext context = ganglia.sessionManager().createSession(UUID.randomUUID().toString());
 
-        ganglia.agentLoop().run("Concatenate files a.txt and b.txt in " + sharedTempDir, context)
+        ganglia.agentLoop().run("Concatenate file1.txt and file2.txt", context)
             .onComplete(testContext.succeeding((String result) -> {
                 testContext.verify(() -> {
-                    assertTrue(result.contains("HelloWorld"), "Result was: " + result);
+                    assertTrue(result.contains("Part 1 Part 2"));
                     testContext.completeNow();
                 });
             }));
-
     }
 }
